Fixed name of rust package

--- a/choco/packages.config
+++ b/choco/packages.config
@@ -10,7 +10,7 @@
     <package id="terraform" />
     <package id="miktex" />
     <package id="firefox" />
-    <package id="rustup" />
+    <package id="rust" />
     <package id="r" />
     <package id="steam" />
     <package id="nodejs" />
